prepare for exe